--- a/jlinfro/pom.xml
+++ b/jlinfro/pom.xml
@@ -2,14 +2,14 @@
     <parent>
         <groupId>com.github.linfro</groupId>
         <artifactId>jlinfro-parent</artifactId>
-        <version>0.0.1</version>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.linfro</groupId>
 	<artifactId>jlinfro</artifactId>
 	<packaging>jar</packaging>
-	<version>0.0.1</version>		
+	<version>0.0.1-SNAPSHOT</version>		
 	
 	<name>JLinfro framework</name>
 	<description>Swing based binding and validation framework</description>
