--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>com.github.linfro</groupId>
 	<artifactId>jlinfro-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>0.0.1</version>
+	<version>0.0.1-SNAPSHOT</version>
 	
 	<name>JLinfro framework</name>
 	<description>Swing based binding and validation framework</description>
@@ -36,9 +36,8 @@
 	<scm>
 		<connection>scm:git:git@github.com:linfro/JLinfro.git</connection>
 		<developerConnection>scm:git:git@github.com:linfro/JLinfro.git</developerConnection>
-		<url>git@github.com:linfro/JLinfro.git</url>
-	  <tag>jlinfro-parent-0.0.1</tag>
-  </scm>
+	        <url>https://github.com/linfro/JLinfro.git</url>
+        </scm>
 	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
