--- a/pom.xml
+++ b/pom.xml
@@ -34,9 +34,9 @@
 	</developers>	
 
 	<scm>
-		<connection>scm:git:git@github.com:linfro/JLinfro.git</connection>
-		<developerConnection>scm:git:git@github.com:linfro/JLinfro.git</developerConnection>
-	        <url>https://github.com/linfro/JLinfro.git</url>
+	        <connection>scm:git:git://github.com/linfro/JLinfro.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com/linfro/JLinfro.git</developerConnection>
+	        <url>https://github.com/linfro/JLinfro</url>
         </scm>
 	
 	<properties>
