--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 
 	<scm>
 	        <connection>scm:git:git://github.com/linfro/JLinfro.git</connection>
-		<developerConnection>scm:git:git@github.com/linfro/JLinfro.git</developerConnection>
+		<developerConnection>scm:git:ssh://git@github.com/linfro/JLinfro.git</developerConnection>
 	        <url>https://github.com/linfro/JLinfro</url>
         </scm>
 	
