--- a/pom.xml
+++ b/pom.xml
@@ -5,15 +5,10 @@
 	<packaging>pom</packaging>
 	<version>0.0.2-SNAPSHOT</version>
 	
-	<name>JLinfro framework</name>
-	<description>Swing based binding and validation framework</description>
+	<name>JLinfro Parent</name>
+	<description>Parent module for JLinfro project</description>
 	<url>https://github.com/linfro/JLinfro</url>
-	<inceptionYear>2014</inceptionYear>
-	
-    <modules>
-        <module>jlinfro</module>
-        <module>jlinfro-sample</module>
-    </modules>	
+	<inceptionYear>2014</inceptionYear>		
 	
 	<licenses>
 		<license>
@@ -26,15 +21,26 @@
 
 	<developers>
 		<developer>
-			<id>owner</id>
+			<id>linfro</id>
 			<name>Dmitry Ermakov</name>
 			<email>ermadmi78@gmail.com</email>
-			<timezone>UTC+4</timezone>
+			<url>http://www.linkedin.com/pub/dmitry-ermakov/2/854/785</url>
+			<roles>
+			        <role>owner</role>
+				<role>architect</role>
+				<role>developer</role>
+			</roles>
+			<timezone>UTC+4</timezone>			
 		</developer>
-	</developers>	
+	</developers>
+
+    <modules>
+        <module>jlinfro</module>
+        <module>jlinfro-sample</module>
+    </modules>	
 
 	<scm>
-	        <connection>scm:git:git://github.com/linfro/JLinfro.git</connection>
+	        <connection>scm:git:https://github.com/linfro/JLinfro</connection>
 		<developerConnection>scm:git:https://github.com/linfro/JLinfro</developerConnection>
 	        <url>https://github.com/linfro/JLinfro</url>
 	        <tag>HEAD</tag>
@@ -113,43 +119,44 @@
                                 </execution>
                             </executions>
                         </plugin>
-                            <plugin>
-                                <groupId>org.apache.maven.plugins</groupId>
-                                <artifactId>maven-gpg-plugin</artifactId>
-                                <version>1.4</version>
-                                <configuration>
-                                    <passphrase>${gpg.passphrase}</passphrase>
-                                </configuration>
-                                <executions>
-                                    <execution>
-                                        <id>sign-artifacts</id>
-                                        <phase>verify</phase>
-                                        <goals>
-                                            <goal>sign</goal>
-                                        </goals>
-                                    </execution>
-                                </executions>
-                            </plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
 				<version>2.4.2</version>
-				<configuration>
-					<arguments>-Dgpg.passphrase=${gpg.passphrase}</arguments>
-				</configuration>
 			</plugin>                            
                 </plugins>
         </build>
-	<distributionManagement>
-		<repository>
-			<id>sonatype-nexus-staging</id>
-			<name>Nexus Staging Repo</name>
-			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
-		</repository>
-		<snapshotRepository>
-			<id>sonatype-nexus-snapshots</id>
-			<name>Nexus Snapshot Repo</name>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
-		</snapshotRepository>
-	</distributionManagement>        
+
+    <profiles>
+        <profile>
+            <id>sign-artifacts</id>
+            <activation>
+                <property>
+                    <name>performRelease</name>
+                    <value>true</value>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+		    <plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-gpg-plugin</artifactId>
+			<version>1.4</version>
+			<configuration>
+			    <passphrase>${gpg.passphrase}</passphrase>
+			</configuration>
+			<executions>
+			    <execution>
+				<id>sign-artifacts</id>
+				<phase>verify</phase>
+				<goals>
+				    <goal>sign</goal>
+				</goals>
+			    </execution>
+			</executions>
+		    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>        
 </project>
