--- a/jlinfro-sample/pom.xml
+++ b/jlinfro-sample/pom.xml
@@ -2,14 +2,14 @@
     <parent>
         <groupId>com.github.linfro</groupId>
         <artifactId>jlinfro-parent</artifactId>
-        <version>0.0.4</version>
+        <version>0.0.5-SNAPSHOT</version>
     </parent>
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.linfro</groupId>
 	<artifactId>jlinfro-sample</artifactId>
 	<packaging>jar</packaging>
-	<version>0.0.4</version>		
+	<version>0.0.5-SNAPSHOT</version>		
 	
 	<name>JLinfro Samples</name>
 	<description>Set of samples for JLinfro framework</description>
