--- a/pom.xml
+++ b/pom.xml
@@ -1,144 +1,145 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.github.linfro</groupId>
-	<artifactId>jlinfro-parent</artifactId>
-	<packaging>pom</packaging>
-	<version>0.0.5-SNAPSHOT</version>
-	
-	<name>JLinfro Parent</name>
-	<description>Parent module for JLinfro project</description>
-	<url>https://github.com/linfro/JLinfro</url>
-	<inceptionYear>2014</inceptionYear>		
-	
-	<licenses>
-		<license>
-			<name>The Apache Software License, Version 2.0</name>
-			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-			<distribution>repo</distribution>
-			<comments>A business-friendly OSS license</comments>
-		</license>
-	</licenses>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.github.linfro</groupId>
+    <artifactId>jlinfro-parent</artifactId>
+    <packaging>pom</packaging>
+    <version>0.0.5-SNAPSHOT</version>
 
-	<developers>
-		<developer>
-			<id>linfro</id>
-			<name>Dmitry Ermakov</name>
-			<email>ermadmi78@gmail.com</email>
-			<url>http://www.linkedin.com/pub/dmitry-ermakov/2/854/785</url>
-			<roles>
-			        <role>owner</role>
-				<role>architect</role>
-				<role>developer</role>
-			</roles>
-			<timezone>UTC+4</timezone>			
-		</developer>
-	</developers>
+    <name>JLinfro Parent</name>
+    <description>Parent module for JLinfro project</description>
+    <url>https://github.com/linfro/JLinfro</url>
+    <inceptionYear>2014</inceptionYear>
+
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+            <comments>A business-friendly OSS license</comments>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <id>linfro</id>
+            <name>Dmitry Ermakov</name>
+            <email>ermadmi78@gmail.com</email>
+            <url>http://www.linkedin.com/pub/dmitry-ermakov/2/854/785</url>
+            <roles>
+                <role>owner</role>
+                <role>architect</role>
+                <role>developer</role>
+            </roles>
+            <timezone>UTC+4</timezone>
+        </developer>
+    </developers>
 
     <modules>
         <module>jlinfro</module>
         <module>jlinfro-sample</module>
-    </modules>	
+    </modules>
 
-	<scm>
-	        <connection>scm:git:https://github.com/linfro/JLinfro</connection>
-		<developerConnection>scm:git:https://github.com/linfro/JLinfro</developerConnection>
-	        <url>https://github.com/linfro/JLinfro</url>
-	        <tag>HEAD</tag>
-        </scm>
-	
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>1.7</java.version>
-		<slf4j.version>1.7.5</slf4j.version>
-		<junit.version>4.10</junit.version>
-	</properties>	
+    <scm>
+        <connection>scm:git:https://github.com/linfro/JLinfro</connection>
+        <developerConnection>scm:git:https://github.com/linfro/JLinfro</developerConnection>
+        <url>https://github.com/linfro/JLinfro</url>
+        <tag>HEAD</tag>
+    </scm>
 
-	<dependencyManagement>
-	  <dependencies>
-		<dependency>
-			<groupId>com.github.linfro</groupId>
-			<artifactId>jlinfro</artifactId>
-			<version>${project.version}</version>
-		</dependency>            		
-                <dependency>
-	                <groupId>org.slf4j</groupId>
-	                <artifactId>slf4j-api</artifactId>
-	                <version>${slf4j.version}</version>
-                </dependency>
-                <dependency>
-	                <groupId>org.slf4j</groupId>
-	                <artifactId>slf4j-simple</artifactId>
-	                <version>${slf4j.version}</version>
-                </dependency>                
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>${junit.version}</version>
-			<scope>test</scope>
-		</dependency>
-          </dependencies>                
-        </dependencyManagement>
-        
-        <build>
-                <plugins>
-                        <plugin>
-                                <groupId>org.apache.maven.plugins</groupId>
-                                <artifactId>maven-compiler-plugin</artifactId>
-                                <version>3.1</version>
-                                <configuration>
-                                        <source>${java.version}</source>
-                                        <target>${java.version}</target>
-                                        <encoding>${project.build.sourceEncoding}</encoding>
-                                </configuration>
-                        </plugin>
-                        <plugin>
-                                <groupId>org.apache.maven.plugins</groupId>
-                                <artifactId>maven-source-plugin</artifactId>
-                                <version>2.2.1</version>
-                                <executions>
-                                        <execution>
-                                                <id>attach-sources</id>
-                                                <phase>package</phase>
-                                                <goals>
-                                                        <goal>jar</goal>
-                                                </goals>
-                                        </execution>
-                                </executions>
-                        </plugin>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-javadoc-plugin</artifactId>
-                            <version>2.9.1</version>
-                            <executions>
-                                <execution>
-                                    <id>attach-javadocs</id>
-                                    <phase>package</phase>
-                                    <goals>
-                                        <goal>jar</goal>
-                                    </goals>
-                                </execution>
-                            </executions>
-                        </plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-release-plugin</artifactId>
-				<version>2.4.2</version>
-			</plugin>                            
-                </plugins>
-        </build>
-        
-	<distributionManagement>
-		<repository>
-			<id>sonatype-nexus-staging</id>
-			<name>Nexus Staging Repo</name>
-			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
-		</repository>
-		<snapshotRepository>
-			<id>sonatype-nexus-snapshots</id>
-			<name>Nexus Snapshot Repo</name>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
-		</snapshotRepository>
-	</distributionManagement>        
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>1.7</java.version>
+        <slf4j.version>1.7.5</slf4j.version>
+        <junit.version>4.10</junit.version>
+    </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.github.linfro</groupId>
+                <artifactId>jlinfro</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-simple</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.version}</version>
+                <scope>test</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.2.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.9.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.4.2</version>
+            </plugin>
+        </plugins>
+    </build>
+
+    <distributionManagement>
+        <repository>
+            <id>sonatype-nexus-staging</id>
+            <name>Nexus Staging Repo</name>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+        </repository>
+        <snapshotRepository>
+            <id>sonatype-nexus-snapshots</id>
+            <name>Nexus Snapshot Repo</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
 
     <profiles>
         <profile>
@@ -151,25 +152,25 @@
             </activation>
             <build>
                 <plugins>
-		    <plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-gpg-plugin</artifactId>
-			<version>1.4</version>
-			<configuration>
-			    <passphrase>${gpg.passphrase}</passphrase>
-			</configuration>
-			<executions>
-			    <execution>
-				<id>sign-artifacts</id>
-				<phase>verify</phase>
-				<goals>
-				    <goal>sign</goal>
-				</goals>
-			    </execution>
-			</executions>
-		    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>1.4</version>
+                        <configuration>
+                            <passphrase>${gpg.passphrase}</passphrase>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
                 </plugins>
             </build>
         </profile>
-    </profiles>        
+    </profiles>
 </project>
