--- a/jlinfro-javafx/pom.xml
+++ b/jlinfro-javafx/pom.xml
@@ -2,14 +2,14 @@
     <parent>
         <groupId>com.github.linfro</groupId>
         <artifactId>jlinfro-parent</artifactId>
-        <version>0.0.6-SNAPSHOT</version>
+        <version>0.0.6</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.linfro</groupId>
     <artifactId>jlinfro-javafx</artifactId>
     <packaging>jar</packaging>
-    <version>0.0.6-SNAPSHOT</version>
+    <version>0.0.6</version>
 
     <name>JLinfro JavaFX</name>
     <description>JavaFX implementation of JLinfro framework</description>
