--- a/jlinfro-swing-sample/pom.xml
+++ b/jlinfro-swing-sample/pom.xml
@@ -2,14 +2,14 @@
     <parent>
         <groupId>com.github.linfro</groupId>
         <artifactId>jlinfro-parent</artifactId>
-        <version>0.0.10</version>
+        <version>0.0.11-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.linfro</groupId>
     <artifactId>jlinfro-swing-sample</artifactId>
     <packaging>jar</packaging>
-    <version>0.0.10</version>
+    <version>0.0.11-SNAPSHOT</version>
 
     <name>JLinfro Swing Sample</name>
     <description>Sample application for Swing implementation of JLinfro framework</description>
