--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>com.github.linfro</groupId>
     <artifactId>jlinfro-parent</artifactId>
     <packaging>pom</packaging>
-    <version>0.0.10</version>
+    <version>0.0.11-SNAPSHOT</version>
 
     <name>JLinfro Parent</name>
     <description>Parent module for JLinfro framework</description>
@@ -46,7 +46,7 @@
         <connection>scm:git:https://github.com/linfro/JLinfro</connection>
         <developerConnection>scm:git:https://github.com/linfro/JLinfro</developerConnection>
         <url>https://github.com/linfro/JLinfro</url>
-        <tag>jlinfro-parent-0.0.10</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <properties>
